improved scrapers and skill extruction